Added new branch

--- a/Water Effects/index.html
+++ b/Water Effects/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
         <div class="content">
-            <h2>Decagon </h2>
-            <h2>Decagon </h2>
+            <h2>Ogidan</h2>
+            <h2>Ogidan </h2>
         </div>
 </body>
 </html>
